# try_pybind11

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  requirements.txt
src/: Animal.cpp  Animal.hpp  animal_test.py  main.cpp  pybind11_animal_wrapper.cpp  tasks.py
